--- a/package.json
+++ b/package.json
@@ -8,22 +8,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.0.18",
-    "@tailwindcss/forms": "^0.5.7",
+    "@nextui-org/react": "^2.3.6",
+    "@remixicon/react": "^4.2.0",
+    "@tremor/react": "^3.17.2",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.0",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.3",
     "clsx": "^2.0.0",
     "next": "^14.0.2",
+    "pg": "^8.11.5",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.4.3",
     "typescript": "5.2.2",
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
